--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -7,4 +7,4 @@ BBFILE_COLLECTIONS += "meta-jumpnow"
 BBFILE_PATTERN_meta-jumpnow := "^${LAYERDIR}/"
 BBFILE_PRIORITY_meta-jumpnow = "12"
 
-LAYERSERIES_COMPAT_meta-jumpnow = "dunfell"
+LAYERSERIES_COMPAT_meta-jumpnow = "gatesgarth"
